# Designed-Partten-Version-C-

./: .vscode-ctags  README.md
Chapter 10/: Hand.h  main.cpp
Chapter 11/: AbstractFile.h  main.cpp  test
Chapter 12/: AbstractDisplay.h  main.cpp  test
Chapter 13/: AbstractElement.h  AbstractVisitor.h  main.cpp
Chapter 14/: AbstractSupport.h  Trouble.h  main.cpp  test
Chapter 17/: AbstractGenerator.cpp  AbstractGenerator.h  AbstractObserver.cpp  AbstractObserver.h  main.cpp  test
Chapter 18/: Memento.h  flow.drawio  main.cpp  test
Chapter 21/: Printable.h  main.cpp  test
Chapter 3/: .vscode-ctags  AbstractDisplay.h  main.cpp  test
Chapter 4/: AbstractFactory.h  CMakeLists.txt  main.cpp  test
Chapter 5/: Singleton.h  main.cpp  test
Chapter 6/: AbstractFramework.h  CMakeLists.txt  main.cpp  test
Chapter 7/: AbstractBuilder.h  main.cpp  test
Chapter 8/: AbstractFatory.h  AbstractItem.h
Chapter 9/: Display.h  main.cpp  test
